[package]
name = "help-zet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = { version = "1.2.0", default-features = false, features = ["std", "alloc"] }
enable-ansi-support = "0.2.1"
once_cell = "1.17.1"
supports-color = "2.0.0"
terminal_size = "0.2.5"
textwrap = { version = "0.16.0", default-features = false, features = ["smawk"] }
