[package]
name = "zet"
version = "1.0.0-prerelease.1"
authors = ["Yarrow Angelweed <yarrow.angelweed@gmail.com>"]
description = "zet finds the union, intersection, set difference, etc of files considered as sets of lines"
documentation = "https://github.com/yarrow/zet"
homepage = "https://github.com/yarrow/zet"
repository = "https://github.com/yarrow/zet"
readme = "README.md"
keywords = ["set", "operation", "union", "uniq", "intersection"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
edition = '2021'

[dependencies]
anyhow = "1.0.42"
bstr = { version = "1.1.0", default-features = false, features = ["std", "alloc"] }
encoding_rs = "0.8.28"
encoding_rs_io = "0.1.7"
fxhash = "0.2.1"
clap = { version = "4.1.4", default-features = false, features = ["std","error-context","suggestions", "derive","cargo"] }
memchr = "2.4.0"
indexmap = "1.7.0"
is-terminal = "0.4.2"
enable-ansi-support = "0.2.1"
supports-color = "2.0.0"
textwrap = "0.16.0"
once_cell = "1.17.1"
terminal_size = "0.2.5"

[dev-dependencies]
assert_cmd = "2.0.7"
assert_fs = "1.0.10"
itertools = "0.10.5"

[profile.release]
opt-level = 3
lto = "thin"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.5"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

